fix: :bug: video pushing page overflow

--- a/src/scss/components/VideoBackground.module.scss
+++ b/src/scss/components/VideoBackground.module.scss
@@ -3,7 +3,7 @@
   overflow: hidden;
   border-top: 1px solid gray;
   border-bottom: 1px solid gray;
-  width: 100vw;
+  width: 100%;
   height: 50vh;
 }
 
